--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Template • Collection</title>
-    <link rel="stylesheet" href="./client/styles/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+    <link rel="stylesheet" href="/styles/index.css" />
   </head>
   <body>
     <section id="app" class="app-container"></section>
